added ref to bootstrap in base template

--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -5,6 +5,10 @@
   <head>
     <title>LOI Procesos</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'vendor/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'vendor/css/bootstrap-theme.min.css' %}">
+    <script src="{% static 'vendor/js/bootstrap.min.js' %}"
+
   </head>
   <body>
     <div class="page-header">
