fixed script close tag in base.html

--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/css/bootstrap-theme.min.css' %}">
-    <script src="{% static 'vendor/js/bootstrap.min.js' %}"
+    <script src="{% static 'vendor/js/bootstrap.min.js' %}"></script>
 
   </head>
   <body>
