fixed clases viewer html, now shows exposiciones

--- a/clases/templates/clases/ver_clase.html
+++ b/clases/templates/clases/ver_clase.html
@@ -3,11 +3,11 @@
 {% block content %}
   <h1>Clase {{ clase }}</h1>
 
-  <h2>Exposiciones en esta clase: </h2>
+  <h2>Hay {{ exposiciones|length }} exposicion/es en esta clase </h2>
 
   {% if exposiciones %}
     {% for exp in exposiciones %}
-    <a href="{% url 'ver_exposicion' exp.id %}"> {{ exposicion }} </a>
+    <a href="{% url 'ver_exposicion' exp.id %}"> {{ exp }} </a>
     {% endfor %}
   {% endif %}
   <p> Agregar otra exposicion a esta clase!: </p>
