fixed exposicion viewer html, now shows the exposicion name

--- a/clases/templates/clases/ver_exposicion.html
+++ b/clases/templates/clases/ver_exposicion.html
@@ -1,9 +1,9 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
-  <h1>Exposicion: {{ clase }}</h1>
+  <h1>Exposicion: {{ exposicion }}</h1>
 
-  <h2>Preguntas hechas en esta exposicion: </h2>
+  <h2>Preguntas realizadas en esta exposicion: </h2>
 
   <ul>
   {% if preguntas %}
