--- a/clases/templates/clases/ver_exposicion.html
+++ b/clases/templates/clases/ver_exposicion.html
@@ -8,7 +8,7 @@
   <ul>
   {% if preguntas %}
     {% for preg in preguntas %}
-    <li>{{ preg.grupo }} realizó {{ preg.cantidad }} pregunta/s </li>
+    <li>{{ preg.preguntador }} realizó {{ preg.cantidad }} pregunta/s </li>
     {% endfor %}
   </ul>
   {% endif %}
