changed button form to input, to track the value

--- a/clases/templates/clases/ver_exposicion.html
+++ b/clases/templates/clases/ver_exposicion.html
@@ -16,6 +16,6 @@
 
   <form method="POST" class="post-form">{% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="save btn btn-default">Cargar!</button>
+    <input type="submit" value="pregunta" class="save btn btn-default">Cargar!</input>
   </form>
 {% endblock %}
