--- a/clases/templates/clases/ver_exposicion.html
+++ b/clases/templates/clases/ver_exposicion.html
@@ -16,6 +16,6 @@
 
   <form method="POST" class="post-form">{% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="pregunta" class="save btn btn-default">Cargar!</input>
+    <input type="submit" name="pregunta" class="save btn btn-default" value="Cargar!"></input>
   </form>
 {% endblock %}
