--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <title>LOI Procesos</title>
-    <link type="text/css" rel="stylesheet" href="{% static 'css/photo.css' %}?{% now "U" %}"/>
+    <link type="text/css" rel="stylesheet" href="{% static 'css/base.css' %}?{% now "U" %}"/>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/css/bootstrap-theme.min.css' %}">
