--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -16,7 +16,7 @@
       <a href="http://loiprocesos.com/"><h1>LOI Procesos!</h1></a>
       <p> Cátedra Procesos Industriales - Licenciatura en Organización Industrial - UTN Facultad Regional Rafaela </p>
       <div class="seccion"> Teoría </div>
-      <div class="seccion"> Grupos </div>
+      <a href= "{% url 'grupos_home' %}" class="seccion"> Grupos </a>
       <a href= "{% url 'clases_home' %}" class="seccion"> Clases </a>
     </div>
     <div class="lateral">
