--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/css/bootstrap-theme.min.css' %}">
+    <link rel="stylesheet" href="{% static 'vendor/css/bootstrap-datetimepicker.min.css' %}">
+
+    <script src="{% static 'vendor/js/jquery-2.2.4.min.js' %}"></script>
+    <script src="{% static 'vendor/js/moment.js' %}"></script>
     <script src="{% static 'vendor/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'vendor/js/bootstrap-datetimepicker.min.js' %}"></script>
 
   </head>
   <body>
