--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -32,8 +32,10 @@
     	<div class="option"><p>blalñfjñlsdñflajsasdkflaskdjflñkasfas</p></div>
     </div>
     <div class="contenido">
-      {% block content %}
-      {% endblock %}
+      <div class="container">
+        {% block content %}
+        {% endblock %}
+      </div>
     </div>
 
   </body>
