--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -9,11 +9,16 @@
     <link rel="stylesheet" href="{% static 'vendor/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/css/bootstrap-theme.min.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/css/bootstrap-datetimepicker.min.css' %}">
+    <link
+    href="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.css"
+    rel="stylesheet" type="text/css">
+
 
     <script src="{% static 'vendor/js/jquery-2.2.4.min.js' %}"></script>
     <script src="{% static 'vendor/js/moment.js' %}"></script>
     <script src="{% static 'vendor/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'vendor/js/bootstrap-datetimepicker.min.js' %}"></script>
+    <script src="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.js"></script>
 
   </head>
   <body>
