extended base template to registration html

--- a/base/templates/registration/activate.html
+++ b/base/templates/registration/activate.html
@@ -1,3 +1,9 @@
+{% extends 'base/base.html' %}
+
+{% block content %}
+
 <h2> Falló la activación de tu cuenta </h2>
 
 <h2> Clave de activación no válida: {{ activation_key }}  </h2>
+
+{% endblock %}
