--- a/base/templates/registration/registration_complete.html
+++ b/base/templates/registration/registration_complete.html
@@ -1,2 +1,6 @@
+{% extends 'base/base.html' %}
+
+{% block content %}
 <h1> Felicitaciones! Ya estás registrado en Loi Procesos! </h1>
 <h2> Revisá tu correo para activar tu cuenta ;)  </h2>
+{% endblock %}
