--- a/base/templates/registration/activation_complete.html
+++ b/base/templates/registration/activation_complete.html
@@ -1,1 +1,5 @@
-<h1> Bien! Tu cuenta ya está activada! </h1>
+{% extends 'base/base.html' %}
+
+{% block content %}
+<h1> Felicitacines! Tu cuenta ya está activada! </h1>
+{% endblock %}
