--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -25,7 +25,7 @@
     <div class="page-header">
       <div class = "row">
         <div class="col-md-8">
-          <a href="{% url 'home' %}"><h1>LOI Procesos!</h1></a>
+          <a href="{% url 'home' %}"class="ph-title"><h1>LOI Procesos!</h1></a>
           <p> Cátedra Procesos Industriales - Licenciatura en Organización Industrial - UTN Facultad Regional Rafaela </p>
         </div>
         <div class="col-md-4">
@@ -42,7 +42,7 @@
           <a href="#menu-toggle" class="menu-button" id="menu-toggle">
             <span class="glyphicon glyphicon-menu-hamburger" ></span>
           </a>
-          <div class="seccion"> Teoría </div>
+          <a href="{% url 'home' %}" class="seccion"> Teoría </a>
           <a href= "{% url 'grupos_home' %}" class="seccion"> Grupos </a>
           <a href= "{% url 'clases_home' %}" class="seccion"> Clases </a>
         </div>
