--- a/base/static/css/base.css
+++ b/base/static/css/base.css
@@ -17,6 +17,12 @@ a:hover {
   text-decoration: none;
 }
 
+span {
+  font-style: italic;
+  font-family: monospace;
+  color: #2980B9;
+}
+
 /* Page Header */
 .page-header {
   margin: 0;
