--- a/clases/templates/clases/ver_exposicion.html
+++ b/clases/templates/clases/ver_exposicion.html
@@ -5,58 +5,78 @@
   <h1>Exposicion: {{ exposicion }}</h1>
 
   <div class="row">
-      <div class='col-sm-6'>
-          {% if exposicion.start_expo %}
-            <p>Comienzo de la exposición: {{ exposicion.start_expo }}</p>
-          {% else %}
-            <form method="POST" class="post-form">{% csrf_token %}
-              {{ st_expo_form.as_p }}
-              <input type="submit" name="st_ex" class="save btn btn-default" value="Cargar!"></input>
-            </form>
-          {% endif %}
+    <div class="col-sm-8">
+      {% if exposicion.start_expo %}
+        <p>Comienzo de la exposición: {{ exposicion.start_expo }}</p>
+      {% else %}
+        <form method="POST" class="post-form">{% csrf_token %}
+          {{ st_expo_form.as_p }}
+          <input type="submit" name="st_ex" class="save btn btn-default" value="Cargar!"></input>
+        </form>
+      {% endif %}
 
-          {% if exposicion.start_ques %}
-            <p>Comienzo de las preguntas: {{ exposicion.start_ques }}</p>
-          {% else %}
-            <form method="POST" class="post-form">{% csrf_token %}
-              {{ st_ques_form.as_p }}
-              <input type="submit" name="st_qu" class="save btn btn-default" value="Cargar!"></input>
-            </form>
-          {% endif %}
+      {% if exposicion.start_ques %}
+        <p>Comienzo de las preguntas: {{ exposicion.start_ques }}</p>
+      {% else %}
+        <form method="POST" class="post-form">{% csrf_token %}
+          {{ st_ques_form.as_p }}
+          <input type="submit" name="st_qu" class="save btn btn-default" value="Cargar!"></input>
+        </form>
+      {% endif %}
 
-          {% if exposicion.finish_expo %}
-            <p>Fin de la exposición: {{ exposicion.finish_expo }}</p>
-          {% else %}
-            <form method="POST" class="post-form">{% csrf_token %}
-              {{ fi_expo_form.as_p }}
-              <input type="submit" name="fi_ex" class="save btn btn-default" value="Cargar!"></input>
-            </form>
+      {% if exposicion.finish_expo %}
+        <p>Fin de la exposición: {{ exposicion.finish_expo }}</p>
+      {% else %}
+        <form method="POST" class="post-form">{% csrf_token %}
+          {{ fi_expo_form.as_p }}
+          <input type="submit" name="fi_ex" class="save btn btn-default" value="Cargar!"></input>
+        </form>
+      {% endif %}
+
+      <h2>Preguntas realizadas en esta exposicion: </h2>
+      <ul>
+      {% if preguntas %}
+        {% for preg in preguntas %}
+        <li>
+          {{ preg.preguntador }} realizó {{ preg.cantidad }} pregunta/s
+          {% if preg.primero %}
+            <span>primero!</span>
+          {% elif preg.ultimo %}
+            <span>ultimo!</span>
           {% endif %}
-        </div>
+        </li>
+        {% endfor %}
+      </ul>
+      {% else %}
+       <p>Todavía no hay preguntas registradas</p>
+      {% endif %}
+      <h2> Agregar otra pregunta a esta clase: </h2>
+
+      <form method="POST" class="post-form">{% csrf_token %}
+        {{ cont_preg_form.as_p }}
+        <input type="submit" name="pregunta" class="save btn btn-default" value="Cargar!"></input>
+      </form>
+
+      <script type="text/javascript">
+          $(function () {
+              $('#id_start_expo, #id_start_ques, #id_finish_expo').datetimepicker({
+                  format: 'DD/MM/YYYY hh:mm:ss'
+              });
+          });
+      </script>
+    </div>
+    <div class="col-sm-4">
+      {% if tiempos_graph %}
+        {{tiempos_graph.0|safe}}
+        {{tiempos_graph.1|safe}}
+      {% endif %}
+
+      {% if preguntas_graph %}
+        {{preguntas_graph.0|safe}}
+        {{preguntas_graph.1|safe}}
+      {% endif %}
     </div>
 
-  <h2>Preguntas realizadas en esta exposicion: </h2>
-
-  <ul>
-  {% if preguntas %}
-    {% for preg in preguntas %}
-    <li>{{ preg.preguntador }} realizó {{ preg.cantidad }} pregunta/s </li>
-    {% endfor %}
-  </ul>
-  {% endif %}
-  <p> Agregar otra pregunta a esta clase!: </p>
-
-  <form method="POST" class="post-form">{% csrf_token %}
-    {{ cont_preg_form.as_p }}
-    <input type="submit" name="pregunta" class="save btn btn-default" value="Cargar!"></input>
-  </form>
-
-  <script type="text/javascript">
-      $(function () {
-          $('#id_start_expo, #id_start_ques, #id_finish_expo').datetimepicker({
-              format: 'DD/MM/YYYY hh:mm:ss'
-          });
-      });
-  </script>
+  </div>
 
 {% endblock %}
