--- a/grupos/templates/grupos/grupos_home.html
+++ b/grupos/templates/grupos/grupos_home.html
@@ -7,5 +7,8 @@
       <li><a href="{% url 'ver_grupo' grupo.id %}"> {{ grupo }} </a></li>
     {% endfor %}
   </ul>
+  <h1>Ver grupos y trabajos prácticos de años anteriores: </h1>
+  <iframe src="https://drive.google.com/embeddedfolderview?id=0B6B1OSj94GfIYXpjUGlRQWthRDQ#grid" 
+          style="width:100%; height:600px; border:0;"></iframe>
 
 {% endblock %}
