added ver_teoria view and templates, with forms

--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -42,7 +42,7 @@
           <a href="#menu-toggle" class="menu-button" id="menu-toggle">
             <span class="glyphicon glyphicon-menu-hamburger" ></span>
           </a>
-          <a href="{% url 'home' %}" class="seccion"> Teoría </a>
+          <a href="{% url 'teoria_home' %}" class="seccion"> Teoría </a>
           <a href= "{% url 'grupos_home' %}" class="seccion"> Grupos </a>
           <a href= "{% url 'clases_home' %}" class="seccion"> Clases </a>
         </div>
