--- a/base/static/css/base.css
+++ b/base/static/css/base.css
@@ -36,7 +36,7 @@ span {
   background-color: #2980B9;
   color: white;
   padding: 10px;
-  height: 150px;
+  height: auto;
   width: 100%;
   clear: both;
   z-index: 10000;
@@ -53,6 +53,25 @@ a.ph-title:visited {
 }
 
 a.ph-title:hover {
+  color: #404040;
+}
+
+.in-line-account {
+  vertical-align: middle;
+  width: 100%;
+  height: 100%;
+  text-align: right;
+}
+
+#ph-link {
+  color: white;
+  font-size: 20px;
+  display: inline-block;
+  padding-top: 20px;
+
+}
+
+a#ph-link:hover {
   color: #404040;
 }
 
