--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -29,12 +29,18 @@
           <p> Cátedra Procesos Industriales - Licenciatura en Organización Industrial - UTN Facultad Regional Rafaela </p>
         </div>
         <div class="col-md-4">
-          {% if user.is_authenticated %}
-            <h4>{{ user.username }}</h4>
-          {% else %}
-            <a href="/accounts/login" class="account-request">Log in</a>
-            <a href="/accounts/register" class="account-request">Registrarse</a>
-          {% endif %}
+          <div class="in-line-account">
+            {% if user.is_authenticated %}
+              <p id="ph-link">Bienvenido {{ user.username }}!</p>
+              <p id="ph-link">  |  </p>
+              <a href="/accounts/logout" class="account-request" id="ph-link"><p>Salir</p></a>
+
+            {% else %}
+              <a href="/accounts/login" class="account-request" id="ph-link"><p>Log in</p></a>
+              <p id="ph-link">  |  </p>
+              <a href="/accounts/register" class="account-request" id="ph-link"><p>Registrarse</p></a>
+            {% endif %}
+        </div>
         </div>
       </div>
       <div class="row">
