added tiempos expo chart in ver clases view

--- a/clases/templates/clases/ver_clase.html
+++ b/clases/templates/clases/ver_clase.html
@@ -19,4 +19,9 @@
       <button type="submit" class="save btn btn-default">Cargar!</button>
     </form>
   {% endif %}
+  {% if tiempos_chart %}
+    {{tiempos_chart.0|safe}}
+    {{tiempos_chart.1|safe}}
+  {% endif %}
+
 {% endblock %}
