changes in page header accounts seccion

--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -36,9 +36,9 @@
               <a href="/accounts/logout" class="account-request" id="ph-link"><p>Salir</p></a>
 
             {% else %}
-              <a href="/accounts/login" class="account-request" id="ph-link"><p>Log in</p></a>
+              <a href="/accounts/login" class="account-request" id="ph-link"><p>Iniciar Sesión</p></a>
               <p id="ph-link">  |  </p>
-              <a href="/accounts/register" class="account-request" id="ph-link"><p>Registrarse</p></a>
+              <a href="/accounts/register" class="account-request" id="ph-link"><p>Registrarme</p></a>
             {% endif %}
         </div>
         </div>
