--- a/clases/templates/clases/ver_exposicion.html
+++ b/clases/templates/clases/ver_exposicion.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-  <h1>Exposicion: {{ exposicion }}</h1>
+  <h1>Exposición: {{ exposicion }}</h1>
 
   <div class="row">
     <div class="col-sm-8">
