--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -31,9 +31,16 @@
         <div class="col-md-4">
           <div class="in-line-account">
             {% if user.is_authenticated %}
+
               <p id="ph-link">Bienvenido {{ user.username }}!</p>
               <p id="ph-link">  |  </p>
               <a href="/accounts/logout" class="account-request" id="ph-link"><p>Salir</p></a>
+
+              {% if user.grupos.first.pk %}
+                <a href="{% url 'ver_grupo' user.grupos.first.pk %}" id="ph-grupo">
+                  {{ user.grupos.first }}
+                </a>
+              {% endif %}
 
             {% else %}
               <a href="/accounts/login" class="account-request" id="ph-link"><p>Iniciar Sesión</p></a>
