--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -11,6 +11,7 @@
     href="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.css"
     rel="stylesheet" type="text/css">
     <link type="text/css" rel="stylesheet" href="{% static 'vendor/css/simple-sidebar.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'vendor/css/trix.css' %}"/>
     <link type="text/css" rel="stylesheet" href="{% static 'css/base.css' %}?{% now "U" %}"/>
 
 
@@ -19,6 +20,7 @@
     <script src="{% static 'vendor/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'vendor/js/bootstrap-datetimepicker.min.js' %}"></script>
     <script src="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.js"></script>
+    <script type="text/javascript" src="{% static 'vendor/js/trix.js' %}"></script>
 
   </head>
   <body>
