added cargar preguntas to side panel

--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -80,7 +80,7 @@
                   <li><a href= "{{ item.1 }}">{{ item.0 }}</a></li>
                   {% endfor %}
                 {% endif %}
-            	  <li><a href= "{% url 'clases_home' %}"> Ver las Clases </a></li>
+            	  <li><a href= "{% url 'preguntas' %}"> Cargar preguntas </a></li>
                 <li><a href= "{% url 'grupos_home' %}"> Grupos de trabajo </a></li>
               </ul>
             </div>
